Trying to fix flicker.

--- a/PollApp/static/sass/screen.scss
+++ b/PollApp/static/sass/screen.scss
@@ -409,7 +409,7 @@ header {
    overflow: hidden;
    #polls {
       position: absolute;
-      /*margin-left: 150px;*/
+      -webkit-backface-visibility: hidden;
       margin-bottom: 600px;
       .poll {
          padding: 3px;
